--- a/src/components/layout/Gallery.css
+++ b/src/components/layout/Gallery.css
@@ -78,24 +78,8 @@
   object-fit: cover;
 }
 
-/* Modal */
-.modal {
-  position: fixed;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 50;
-  padding: 1rem;
-}
 
-.modal-content {
-  position: relative;
-  max-width: 600px;
-  width: 90%;
-  border-radius: 10px;
-}
+
 
 .modal-image {
   width: 100%;
@@ -104,7 +88,7 @@
 }
 
 .modal-text {
-  margin-top: 0.8rem;
+  margin-top: 0.95rem;
   color: #fff;
   font-size: 1rem;
 }
@@ -152,4 +136,68 @@
 .cta-button:hover {
   background-color: var(--gold-dark);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+
+/* VIDEO EN GRID */
+.gallery-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+/* VIDEO EN MODAL */
+.modal-video {
+  width: 100%;
+  max-height: 80vh;
+  object-fit: contain;
+  border-radius: 12px;
+}
+
+.modal {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+
+  background: rgba(0, 0, 0, 0.486);
+
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+
+  z-index: 99999;
+  padding: 20px;
+}
+
+
+.modal-content {
+  position: relative;
+  max-width: 90%;
+  max-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #111111a6;
+  border-radius: 12px;
+  padding: 10px;
+}
+
+/* Para que la imagen no se vaya a un lado */
+.modal-image,
+.modal-video {
+  max-width: 100%;
+  max-height: 80vh;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  border-radius: 12px;
+}
+
+/* Para que el texto también quede centrado */
+.modal-text {
+  text-align: center;
+  font-family:  "Poppins", sans-serif;
 }
