--- a/src/components/layout/Services.css
+++ b/src/components/layout/Services.css
@@ -140,7 +140,7 @@
 
 .modal-image {
   width: 100%;
-  max-height: 220px; /* 👈 más compacto */
+  max-height: 210px; /* 👈 más compacto */
   object-fit: cover;
   border-radius: 0.7rem;
   margin-bottom: 0.8rem;
@@ -153,10 +153,11 @@
 }
 
 .modal-description {
-  color: #5a5a5a;
-  font-size: 0.95rem;
+  color: #ffffff;
+  font-size: 1.08rem;
   line-height: 1.4;
   margin-bottom: 1.2rem;
+  font-family: "Poppins", sans-serif;
 }
 
 .modal-close {
@@ -167,7 +168,7 @@
   border: none;
   font-size: 1.2rem;
   cursor: pointer;
-  color: #666;
+  color: #ffffff;
   transition: color 0.2s ease;
 }
 
@@ -182,7 +183,7 @@
   border-radius: 0.5rem;
   padding: 0.6rem 1.2rem;
   font-size: 0.95rem;
-  font-weight: 600;
+ 
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
@@ -202,3 +203,9 @@
     transform: scale(1);
   }
 }
+.modal-content h3 {
+    margin-bottom: 15px;
+    color: #ededed;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    }
